--- a/21.html
+++ b/21.html
@@ -33,6 +33,10 @@
       <button id="login" class="btn btn-danger">로그인</button>
     </div>
 
+    <div class="lorem" style="width:200px;height:100px;overflow-y: scroll;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta, non quisquam officia fugiat harum quas perferendis? Voluptas minus rem rerum vel sapiente nobis labore, laudantium, quaerat in quia suscipit!</div>
+
+    <div style="height: 1000px"></div>
+
     <div style="overflow:hidden;">
       <div class="slide-container">
         <div class="slide-box">
@@ -71,24 +75,11 @@
 
     <script>
         var 지금사진 = 1;
-
-        // $('.next').on('click', function(){
-        //   if(지금사진 = 1){
-        //     $('.slide-container').css('transform', 'translateX(-100vw)');
-        //     지금사진 += 1;
-        //   }else if(지금사진 = 2){
-        //     $('.slide-container').css('transform', 'translateX(-200vw)');
-        //     지금사진 += 1;
-        //   }
-        // });
-
-        //과제
         $('.next').on('click', function(){
           $('.slide-container').css('transform', 'translateX(-'+지금사진+'00vw)');
           지금사진 += 1;
         });
 
-        //과제
         $('.before').on('click', function(){
           if(지금사진 = 2){
             $('.slide-container').css('transform', 'translateX(0vw)');
@@ -128,7 +119,41 @@
         });
         
         
+        // window.addEventListener('scroll', function(){
+        //   console.log(window.scrollY);
+        //   window.scrollTo(0, 100);
+        // });
 
+        // $(window).on('scroll', function(){
+        //   console.log($(window).scrollTop);
+        // });
+
+        //div의 스크롤바 내린 양 + 눈에보이는div높이 == div의 실제높이
+        // $('.lorem').on('scroll', function(){
+        //   var 스크롤양 = $('.lorem').scrollTop();
+        //   var 스크롤높이 = $('.lorem').scrollHeight();
+        //   var 높이 = $('.lorem').clientHeight();
+
+        //   console.log(스크롤양);
+        //   console.log(스크롤높이);
+        // });
+
+        //과제1
+        $(window).on('scroll', function(){
+          if($(window).scrollTop() > 100){
+            $('.navbar-brand').css('font-size','15px');
+          }else{
+            $('.navbar-brand').css('font-size','30px');
+          }
+          console.log($(window).scrollTop());
+        });
+
+        //과제2
+        $('.lorem').on('scroll', function(){
+          if($('.lorem').scrollTop() + $('.lorem').innerHeight() >= $('.lorem').prop("scrollHeight")){
+            alert('다읽음');
+          }
+        });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
