--- a/23-24 detail.html
+++ b/23-24 detail.html
@@ -55,6 +55,7 @@
         <li class="tab-button">Products</li>
         <li class="tab-button orange">Information</li>
         <li class="tab-button">Shipping</li>
+        <li class="tab-button">Shipping</li>
       </ul>
       <div class="tab-content">
         <p>상품설명입니다. Product</p>
@@ -64,6 +65,9 @@
       </div>
       <div class="tab-content">
         <p>배송정보입니다. Shipping</p>
+      </div>
+      <div class="tab-content">
+        <p>배송정보입니다. Shipping2</p>
       </div>
     </div>
 
