--- a/38 list.html
+++ b/38 list.html
@@ -36,63 +36,43 @@
           { id : 2, price : 60000, title : 'Black Monastery' }
       ];
 
-      // products.forEach((a) => {
-      //   var 템플릿 = `<div class="col-sm-4">
-      //       <img src="https://via.placeholder.com/600" class="w-100">
-      //       <h5>${a.title}</h5>
-      //       <p>가격 : ${a.price}</p>
-      //     </div>`;
+      // var 어레이 = [7, 3, 5, 2, 40];
+      // var 어레이2 = ['a', 'c', 'b'];
 
-      //   $('.row').append(템플릿);
-      // })
+      // 어레이.sort(function(a,b){
+      //   return a - b;
+      // });
+      // console.log(어레이);
+      // 어레이2.sort();
+      // console.log(어레이2);
 
-      // $('#more').click(function(){
-      //   $.get('https://codingapple1.github.io/js/more1.json').done(function(data){
-      //     console.log(data);
-
-      //     data.forEach((a) => {
-      //       var 템플릿 = `<div class="col-sm-4">
-      //         <img src="https://via.placeholder.com/600" class="w-100">
-      //         <h5>${a.title}</h5>
-      //         <p>가격 : ${a.price}</p>
-      //       </div>`;
-
-      //       $('.row').append(템플릿);
-      //     })
-      //   }).fail(function(){
-      //     console.log('실패하였습니다');
-      //   })
-      // })
+      // //과제
+      // 어레이2.sort(function(a,b){
+      //   return (a < b) ? -1 : (a = b) ? 0 : 1;
+      // });
+      // console.log(어레이2);
 
       //과제
-      var click = 0;
+      products.sort(function(a,b){
+        return a.price - b.price;
+      });
+      console.log(products);
 
-      getData(products);
+      products.forEach((a) => {
+        var 템플릿 = `<div class="col-sm-4">
+            <img src="https://via.placeholder.com/600" class="w-100">
+            <h5>${a.title}</h5>
+            <p>가격 : ${a.price}</p>
+          </div>`;
 
-      $('#more').click(function(){
-        
-        var dataLink = '';
-
-        click ++;
-        if(click == 1){
-          dataLink = 'https://codingapple1.github.io/js/more1.json';
-        }else if(click == 2){
-          dataLink = 'https://codingapple1.github.io/js/more2.json';
-          $('#more').hide();
-        }
-
-        $.get(dataLink).done(function(data){
-          console.log(data);
-
-          getData(data);
-
-        }).fail(function(){
-          console.log('실패하였습니다');
-        })
+        $('.row').append(템플릿);
       })
 
-      function getData(array){
-        array.forEach((a) => {
+      $('#more').click(function(){
+        $.get('https://codingapple1.github.io/js/more1.json').done(function(data){
+          console.log(data);
+
+          data.forEach((a) => {
             var 템플릿 = `<div class="col-sm-4">
               <img src="https://via.placeholder.com/600" class="w-100">
               <h5>${a.title}</h5>
@@ -100,8 +80,12 @@
             </div>`;
 
             $('.row').append(템플릿);
+          })
+        }).fail(function(){
+          console.log('실패하였습니다');
         })
-      }
+      })
+
     </script> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
