--- a/38 list.html
+++ b/38 list.html
@@ -24,10 +24,15 @@
       </div>
     </div> 
 
-    <div class="container">
+    <!-- <div class="container">
       <button class="btn btn-danger" id="more">더보기</button>
-    </div>
+    </div> -->
     
+    <div class="container my-3">
+      <button class="btn btn-danger" id="price">가격정렬</button>
+      <button class="btn btn-danger" id="sort">다나가순</button>
+      <button class="btn btn-danger" id="under">6만원이하</button>
+    </div>
 
     <script>
       var products = [
@@ -35,6 +40,37 @@
           { id : 1, price : 50000, title : 'Springfield Shirt' },
           { id : 2, price : 60000, title : 'Black Monastery' }
       ];
+
+      $('#price').click(function(){
+        products.sort(function(a, b){
+          return a.price - b.price;
+        });
+        console.log(products);
+
+        $('.row').html('');
+
+        products.forEach((a) => {
+          var 템플릿 = `<div class="col-sm-4">
+              <img src="https://via.placeholder.com/600" class="w-100">
+              <h5>${a.title}</h5>
+              <p>가격 : ${a.price}</p>
+            </div>`;
+
+          $('.row').append(템플릿);
+        })
+      });
+
+      var 어레이 = [7, 3, 5, 2, 40];
+
+      var 새어레이 = 어레이.filter(function(a){
+        return a < 4;
+      });
+      console.log(새어레이);
+
+      var 새어레이2 = 어레이.map(function(a){
+        return a * 4;
+      });
+      console.log(새어레이2);
 
       // var 어레이 = [7, 3, 5, 2, 40];
       // var 어레이2 = ['a', 'c', 'b'];
@@ -53,10 +89,10 @@
       // console.log(어레이2);
 
       //과제
-      products.sort(function(a,b){
-        return a.price - b.price;
-      });
-      console.log(products);
+      // products.sort(function(a,b){
+      //   return a.price - b.price;
+      // });
+      // console.log(products);
 
       products.forEach((a) => {
         var 템플릿 = `<div class="col-sm-4">
@@ -86,6 +122,47 @@
         })
       })
 
+      //과제1
+      $('#sort').click(function(){
+        products.sort(function(a, b){
+          if(a.title < b.title) return 1;
+          if(a.title > b.title) return -1;
+          if(a.title === b.title) return 0;
+        });
+        console.log(products);
+
+        $('.row').html('');
+
+        products.forEach((a) => {
+          var 템플릿 = `<div class="col-sm-4">
+              <img src="https://via.placeholder.com/600" class="w-100">
+              <h5>${a.title}</h5>
+              <p>가격 : ${a.price}</p>
+            </div>`;
+
+          $('.row').append(템플릿);
+        })
+      });
+
+      //과제2
+      $('#under').click(function(){
+        var newPro = products.filter(function(a){
+          return a.price <= 60000
+        });
+        console.log(newPro);
+
+        $('.row').html('');
+
+        newPro.forEach((a) => {
+          var 템플릿 = `<div class="col-sm-4">
+              <img src="https://via.placeholder.com/600" class="w-100">
+              <h5>${a.title}</h5>
+              <p>가격 : ${a.price}</p>
+            </div>`;
+
+          $('.row').append(템플릿);
+        })
+      });
     </script> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
